--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "men-stack-session-auth-template",
+  "name": "propagation-station-app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
