--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js -e css,ejs,js,json"
   },
+
   "repository": {
     "type": "git",
     "url": "https://git.generalassemb.ly/modular-curriculum-all-courses/men-stack-session-auth-template"
