--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "node server.js",
     "dev": "nodemon server.js -e css,ejs,js,json"
   },
-
   "repository": {
     "type": "git",
     "url": "https://git.generalassemb.ly/modular-curriculum-all-courses/men-stack-session-auth-template"
@@ -23,6 +22,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "heroku": "^10.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.9.5",
